--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,19 +26,17 @@ jobs:
           working_directory: "resume/"
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%dT%H_%M')"
+        run: echo "::set-output name=date::$(date +'%Y%m%dT%H%M')"
       - name: Copy PDF to artifacts and public and Cleanup
         run: |
           cp resume/main.pdf resume/artifacts/resume-${{ steps.date.outputs.date }}.pdf
           cp resume/main.pdf public/resume.pdf
-
-          rm resume/main.pdf
       - name: Push changes to GitHub
         run: |
           git config --local user.name "Jake Gutierrez"
           git config --local user.email "jakegut0108@gmail.com"
 
-          git add public resume/artifacts resume/main.pdf 
+          git add public resume/artifacts
           git commit -m "[CD] Update resume.pdf"
       - name: Push changes
         uses: ad-m/github-push-action@master
