--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "astro": "^1.6.2",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
+    "puppeteer": "^19.2.2",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^8.0.1",
     "tailwindcss": "^3.2.1"
