--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@astrojs/rss": "^1.0.3",
+    "@astrojs/rss": "^2.4.3",
     "astro": "^2.8.3",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
+    "markdown-it": "^13.0.1",
     "puppeteer": "^19.2.2",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^8.0.1",
+    "sanitize-html": "^2.11.0",
     "tailwindcss": "^3.2.1"
   },
   "devDependencies": {
@@ -29,7 +31,9 @@
     "@astrojs/tailwind": "^4.0.0",
     "@tailwindcss/typography": "^0.5.7",
     "@types/github-slugger": "^1.3.0",
+    "@types/markdown-it": "^12.2.3",
     "@types/react": "^18.0.24",
+    "@types/sanitize-html": "^2.9.0",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^8.0.1",
