--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@astrojs/rss": "^2.4.3",
+    "@vercel/analytics": "^1.1.1",
     "astro": "^2.8.3",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
